<resources>
    <string name="app_name">method_gaming</string>
    <string name="play">PLAY</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="settings">Settings</string>
    <string name="help">Help!!!</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibraation</string>
    <string name="music">Music</string>
    <string name="notification">Notification</string>
    <string name="back">Back</string>
    <string name="score_board">ScoreBoard</string>
    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="four">4.</string>
    <string name="five">5.</string>
    <string name="back3">Back</string>
    <string name="back2">Back</string>
    <string name="howtoplay">***HOW TO PLAY***</string>
    <string name="pull">1) Pull Back the Arrow.</string>
    <string name="adjust">3) Adjust the Power of The Shot by Pulling the Arrow Back and Forth.</string>
    <string name="release">4) Release the Arrow when Aimed</string>
    <string name="sure">Make Sure to Avoid the Obstacles.</string>
    <string name="aim">2) Aim at the BULLSEYE.</string>
    <string name="Lvl">Choose Level</string>
    <string name="choose">Choose Level</string>
    <string name="lvl1">LEVEL 1</string>
    <string name="lvl2">LEVEL 2</string>
    <string name="lvl3">LEVEL 3</string>
    <string name="lvl4">LEVEL 4</string>
    <string name="ret">Return To Menu</string>


</resources>
