<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="420dp"
    android:layout_height="700dp"
    android:background="@drawable/back"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">


    <Button
        android:id="@+id/back2"
        android:layout_width="122dp"
        android:layout_height="0dp"
        android:layout_marginBottom="111dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/back2"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="140dp"
        android:text="@string/howtoplay"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginStart="6dp"
        android:text="@string/pull"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="6dp"
        android:text="@string/aim"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:text="@string/adjust"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:text="@string/release"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginStart="18dp"
        android:text="@string/sure"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/back2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

</android.support.constraint.ConstraintLayout>