<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="420dp"
    android:layout_height="700dp"
    android:background="@drawable/back"
    tools:context=".Score_Activity"
    tools:layout_editor_absoluteY="100
   dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="137dp"
        android:paddingEnd="70dp"
        android:paddingStart="70dp"
        android:text="@string/score_board"
        android:textColor="#fff"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="36dp"
        android:text="@string/one"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:layout_marginStart="36dp"
        android:text="@string/two"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginStart="36dp"
        android:text="@string/three"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginStart="36dp"
        android:text="@string/four"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:layout_marginStart="36dp"
        android:text="@string/five"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/back3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/back3"
        android:layout_width="122dp"
        android:layout_height="0dp"
        android:layout_marginBottom="87dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/back3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

</android.support.constraint.ConstraintLayout>