<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lvl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Lvls"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:layout_marginTop="148dp"
        android:text="@string/choose"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/lvlone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lvlone"
        android:layout_width="135dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:background="#f98888"
        android:text="@string/lvl1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lvltwoo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/lvltwoo"
        android:layout_width="135dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/lvl2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lvlthre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvlone" />

    <Button
        android:id="@+id/lvlthre"
        android:layout_width="135dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:background="#ff2121"
        android:text="@string/lvl3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lvlfour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvltwoo" />

    <Button
        android:id="@+id/lvlfour"
        android:layout_width="135dp"
        android:layout_height="0dp"
        android:layout_marginBottom="105dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/lvl4"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvlthre" />
</android.support.constraint.ConstraintLayout>