<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/play"
        android:layout_width="184dp"
        android:layout_height="0dp"
        android:layout_marginBottom="123dp"
        android:layout_marginTop="196dp"
        android:height="@android:dimen/app_icon_size"
        android:background="@android:color/holo_red_light"
        android:text="@string/play"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings"
        android:layout_width="185dp"
        android:layout_height="0dp"
        android:layout_marginBottom="227dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/settings"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play" />

    <Button
        android:id="@+id/help"
        android:layout_width="183dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/help"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <Button
        android:id="@+id/score"
        android:layout_width="181dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/scoreboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play" />

</android.support.constraint.ConstraintLayout>