<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="420dp"
    android:layout_height="700dp"
    android:background="@drawable/back"
    tools:context=".SettingsActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="107dp"
        android:layout_height="38dp"
        android:layout_marginBottom="31dp"
        android:layout_marginStart="55dp"
        android:text="@string/sound"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/vibration"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:text="@string/music"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/notification"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/switch3" />

    <Button
        android:id="@+id/play"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginBottom="103dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/back"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="109dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="199dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="38dp"
        app:layout_constraintStart_toStartOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        app:layout_constraintStart_toStartOf="@+id/switch2"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/switch3"
        app:layout_constraintTop_toBottomOf="@+id/switch3" />
</android.support.constraint.ConstraintLayout>